# hfc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_DOC.md  textai.md
cmake/: HermeticFetchContent.cmake
docs/: genindex.html  index.html  (+3 more)
documentation_src/sphinx/: CMakeLists.txt  cmake.py  conf.py.in  create_identifiers.py  tutorial_archive.cmake
documentation_src/sphinx/templates/: layout.html
example/boost/: CMakeLists.txt  README.md  boost_example.cpp
example/boost/environments/: linux-tipi-ubuntu-cxx17.cmake
example/get-started/: CMakeLists.txt  README.md  get-started.cpp
example/grpc_use_3rd_party_cmake_modules/: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp
example/openssl/: CMakeLists.txt  README.md  main.cpp
example/openssl/environments/: linux-tipi-ubuntu-cxx17.pkr.js
test/: .tipiignore  CMakeLists.txt  boostrap_goldilock_test.cpp  bootstrap_goldilock_test.cpp  check_BUILD_TARGETS.cpp  check_CUSTOM_INSTALL_TARGETS.cpp  check_PATCH_COMMAND.cpp  check_bypass_provider_test.cpp  check_change_FETCHCONTENT_BASE_DIR.cpp  check_compiler_forwarding.cpp  check_delete_build_folder.cpp  check_find_package.cpp  check_hfc_recursive.cpp  check_install_tree_cacheability.cpp  check_install_without_configure.cpp  check_log_level.cpp  check_openssl_build_system.cpp  check_options_and_defines_forwarding.cpp  check_options_forwarding_openssl.cpp  check_prepatch_resolver.cpp  check_source_build_hfc_prefix.cpp  check_source_tree_removal.cpp  check_subdir.cpp  check_subproject_targets_linking.cpp  check_toolchain_overridable_option.cpp  check_version_update.cpp  check_without_install.cpp  configure_stability_test.cpp  fake_goldilock.cpp  fetchContentArgs_GIT_SHALLOW_test.cpp  find_source_tree.hpp  goldilock_provisioning_test.cpp  helpers.hpp  hermetic_dependency_make_executable_findable.cpp  hfc_version_stepping_test.cpp  offline_source_override_test.cpp  run_hfc_discover_targets_overridest_test.cpp  targets_cache_test.cpp  test_helpers.hpp  test_isolation_fixture.hpp  (+2 more)
test/test_project_templates/boostrap_goldilock/: CMakeLists.txt
test/test_project_templates/check_BUILD_TARGETS/: CMakeLists.txt
test/test_project_templates/check_CUSTOM_INSTALL_TARGETS/: CMakeLists.txt
test/test_project_templates/check_PATCH_COMMAND/: CMakeLists.txt
test/test_project_templates/check_bypass_provider/: CMakeLists.txt
test/test_project_templates/check_change_base_dir/: CMakeLists.txt
test/test_project_templates/check_compiler_forwarding/: CMakeLists.txt
test/test_project_templates/check_compiler_forwarding_autotools/: CMakeLists.txt
test/test_project_templates/check_delete_sources_after_build/: CMakeLists.txt
test/test_project_templates/check_find_package/: CMakeLists.txt
test/test_project_templates/check_find_package_via_alias/: CMakeLists.txt
test/test_project_templates/check_find_package_via_alias/custom_find_modules/: Findiconv_lib.cmake
test/test_project_templates/check_install-reuse/: CMakeLists.txt
test/test_project_templates/check_install-reuse_autotools/: CMakeLists.txt
test/test_project_templates/check_offline_source_override/: CMakeLists.txt
test/test_project_templates/check_openssl_build_system/: CMakeLists.txt
test/test_project_templates/check_options_and_defines_forwarding/: CMakeLists.txt
test/test_project_templates/check_options_and_defines_forwarding_autotools/: CMakeLists.txt
test/test_project_templates/check_options_forwarding_openssl/: CMakeLists.txt  simple_example.cpp
test/test_project_templates/check_prepatch_resolver/: CMakeLists.txt
test/test_project_templates/check_resolve_packages_natively/: CMakeLists.txt
test/test_project_templates/check_sbom_bootstrap/: CMakeLists.txt
test/test_project_templates/check_source_build_hfc_prefix/: CMakeLists.txt
test/test_project_templates/check_subdir/: CMakeLists.txt
test/test_project_templates/check_subproject_targets_linking/: CMakeLists.txt
test/test_project_templates/check_toolchain_overridable_option/: CMakeLists.txt
test/test_project_templates/check_version_update/: CMakeLists.txt
test/test_project_templates/check_without_install/: CMakeLists.txt
test/test_project_templates/configure_stability_autotools_dependency_AtBuildTime/: CMakeLists.config_mod.txt  CMakeLists.txt
test/test_project_templates/configure_stability_autotools_dependency_AtConfigureTime/: CMakeLists.config_mod.txt  CMakeLists.txt
test/test_project_templates/configure_stability_cmake_dependency_AtBuildTime/: CMakeLists.config_mod.txt  CMakeLists.txt
test/test_project_templates/configure_stability_cmake_dependency_AtConfigureTime/: CMakeLists.config_mod.txt  CMakeLists.txt
test/test_project_templates/configure_stability_cmake_dependency_genex_blind_spot/: CMakeLists.txt
test/test_project_templates/configure_stability_cmake_dependency_toolchain_hidden_input/: CMakeLists.config_mod.txt  CMakeLists.txt
test/test_project_templates/data/: hfc_goldilock_base_value.cmake
test/test_project_templates/fetchContentArgs_GIT_SHALLOW/: CMakeLists.txt
test/test_project_templates/hfc-recursive-add_subdirectory-initialization/: CMakeLists.txt
test/test_project_templates/hfc-recursive-autotools/: CMakeLists.txt
test/test_project_templates/hfc-recursive-cmake/: CMakeLists.txt
test/test_project_templates/hfc-recursive-cmake-dependecy-aliases/: CMakeLists.txt
test/test_project_templates/hfc-recursive-cmake-dependecy-declaration-order/: CMakeLists.txt
test/test_project_templates/hfc-recursive-cmake_autotools/: CMakeLists.txt
test/test_project_templates/hfc_cmake_targets_discover_overrides_test/: CMakeLists.txt
test/test_project_templates/hfc_version_stepping/: CMakeLists.txt
test/test_project_templates/toolchain/: linux-toolchain-clang-crosscompile.cmake  linux-toolchain-clang.cmake  linux-toolchain-file-hash.cmake  linux-toolchain-fresh-provisioning.cmake  linux-toolchain-genex-blindspot.cmake  linux-toolchain.cmake  linux-toolchain.pkr.js  toolchain.cmake  toolchain_with_non_overridable_option.cmake  toolchain_with_option.cmake  toolchain_without_option.cmake
(+116 files in other folders)
